# autopilot

./: .gitignore  notes.txt  pixi.toml  pyproject.toml
notebooks/: example.db  example.ipynb
src/autopilot/: __init__.py  core.py  routines.py  run.py  types.py
src/autopilot/qc/: __init__.py  inputs.py  outputs.py  struc.py
src/autopilot/qc/adapters/: __init__.py  core.py
src/autopilot/utils/: __init__.py  store.py
tests/: test_autopilot.py
